# singularity-desktop-session

./: LICENSE  README.md  meson.build
Singularity/: index.theme
config/labwc/: rc.xml
data/: singularity.desktop
data/gschemas/: dev.sinty.desktop.gschema.xml
services/: singularity-session.target  xdg-desktop-portal-fix.service
src/: singularity-session  singularity-start
